# Cirrus-Fleet-Health

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cirrus-ci.yml  cirrus-deploy.yml
infra/: app.py  cdk.json
infra/constructs/: __init__.py  fleet_dashboard.py  health_checker.py  remediation_pipeline.py
infra/stacks/: __init__.py  monitoring_stack.py  observability_stack.py  remediation_stack.py
scripts/remediation/: check_process.sh  clear_disk_space.sh  collect_diagnostics.sh  restart_service.sh
scripts/seed_data/: seed_incidents.py
src/diagnostics/: __init__.py  analyzer.py  handler.py
src/diagnostics/collectors/: __init__.py  log_collector.py  metric_snapshot.py  system_info.py
src/escalation/: __init__.py  handler.py
src/health_checker/: __init__.py  evaluator.py  handler.py  publisher.py
src/health_checker/checks/: __init__.py  cloudwatch_metrics.py  ec2_status.py  endpoint_health.py  process_health.py
src/incident_logger/: __init__.py  handler.py
src/remediator/: __init__.py  action_selector.py  handler.py
src/remediator/actions/: __init__.py  (+4 more)
src/shared/: __init__.py  aws_clients.py  constants.py  logger.py  models.py
src/verifier/: __init__.py  handler.py
tests/: conftest.py
tests/integration/: test_step_functions.py
tests/unit/: test_action_selector.py  test_collectors.py  test_diagnostics.py  test_escalation.py  test_evaluator.py  test_handler.py  test_health_checker.py  test_incident_logger.py  test_publisher.py  test_remediator.py  test_verifier.py
